<resources>
    <string name="app_name">findER</string>

    <!-- activity_login.xml -->
    <string name="phoneNumber">전화번호</string>
    <string name="residenceNumber">주민번호</string>
    <string name="residenceNumberReInput">주민번호(재입력)</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- fragment_questionnaire.xml -->
    <string name="questionnaireToolbarTitle">건강 상태</string>
    <string name="mapToolbarTitle">지도</string>

    <!-- menu_toolbar.xml -->
    <string name="questionnaireMenuMove">문진표 메뉴 이동</string>

    <!-- questionnaire toolbar -->
    <string name="linkDelete">연동 삭제</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="before">이전</string>
    <string name="next">다음</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>

    <string name="questionnaireInput">문진표 작성</string>
    <string name="questionnaireAddition">문진표 추가</string>
    <string name="questionnaireLink">문진표 연동</string>
    <string name="questionnaireWrite">문진표 작성</string>
    <string name="questionnaireUpdate">문진표 수정</string>

    <string name="phonenumber_key">phonenumber</string>
    <string name="labels">labels</string>
    <string name="edit_mode">edit mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="medicine_edittext_name">약이름</string>
    <string name="medicine_edittext_date">복용시작일</string>

    <string name="surgery_edittext_name">수술명</string>
    <string name="surgery_edittext_date">수술일</string>

    <string name="disease_edittext_name">질환명</string>
    <string name="disease_edittext_date">질환 진단 시기</string>

    <string name="pref_name">pref</string>

    <string name="condition_present">(해당있음)</string>
    <string name="condition_absent">(해당없음)</string>
    <string name="empty_string" />

    <string name="address">address</string>

    <string name="male">남성</string>
    <string name="female">여성</string>

    <string name="blood_rh_plus">Rh+</string>
    <string name="blood_rh_minus">Rh-</string>
    <string name="blood_a">A</string>
    <string name="blood_b">B</string>
    <string name="blood_ab">AB</string>
    <string name="blood_o">O</string>

</resources>