<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.QuestionnaireModeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bottom_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionnaireAddition"
            android:layout_marginTop="8dp"
            style="@style/ToolbarTitleText" />

        <TextView
            android:id="@+id/qnModeCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/ToolbarLeftTextBtn" />

        <TextView
            android:id="@+id/qnModeNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/ToolbarRightTextBtn"/>

    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/modeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RadioButton
            android:id="@+id/writeQuestionnaireBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/selector_questionnaire_mode_button"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/selector_questionnaire_mode_write_icon"
            android:drawablePadding="15dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="50dp"
            android:text="@string/questionnaireWrite"
            android:textColor="@drawable/selector_questionnaire_mode_text"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/linkQuestionnaireBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/selector_questionnaire_mode_button"
            android:button="@null"
            android:drawableStart="@drawable/selector_questionnaire_mode_link_icon"
            android:drawablePadding="15dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="50dp"
            android:text="@string/questionnaireLink"
            android:textAlignment="center"
            android:textColor="@drawable/selector_questionnaire_mode_text"
            android:textSize="30sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>