<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_logo"
        android:layout_marginTop="105dp"
        app:layout_constraintEnd_toEndOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_accessible_border"
        android:ems="12"
        android:inputType="phone"
        android:maxLength="13"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        tools:text="010-0000-0000" />

    <TextView
        android:id="@+id/residenceNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residenceNumber"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/residenceNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/residenceNumberEditText" />

    <EditText
        android:id="@+id/residenceNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:ems="12"
        android:inputType="number"
        android:background="@drawable/edittext_unaccessible_border"
        app:layout_constraintEnd_toEndOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_deactivate"
        app:layout_constraintEnd_toEndOf="@+id/residenceNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/residenceNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/residenceNumberEditText" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="15sp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

</androidx.constraintlayout.widget.ConstraintLayout>