<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:ems="12"
        android:maxLength="13"
        tools:text="010-0000-0000"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edittext_accessible_border"/>

    <TextView
        android:id="@+id/residenceNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residenceNumber"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/residenceNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/residenceNumberEditText" />

    <EditText
        android:id="@+id/residenceNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:ems="12"
        android:inputType="number"
        android:background="@drawable/edittext_unaccessible_border"
        app:layout_constraintEnd_toEndOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />


    <TextView
        android:id="@+id/residenceNumberReInputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residenceNumberReInput"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:paddingHorizontal="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_unaccessible_border"
        android:ems="12"
        android:inputType="number"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@+id/residenceNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/residenceNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/residenceNumberEditText" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_deactivate"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


</androidx.constraintlayout.widget.ConstraintLayout>