<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.questionnaire.QuestionnaireSecondFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bottom_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionnaireInput"
            style="@style/ToolbarTitleText" />

        <TextView
            android:id="@+id/qnSecondBeforeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before"
            style="@style/ToolbarLeftTextBtn" />

        <TextView
            android:id="@+id/qnSecondNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/ToolbarRightTextBtn"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="혈액형"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rhRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rhPlusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rh+"/>

            <RadioButton
                android:id="@+id/rhMinusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rh-"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/bloodRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/aBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A"/>

            <RadioButton
                android:id="@+id/bBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B"/>

            <RadioButton
                android:id="@+id/oBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O"/>

            <RadioButton
                android:id="@+id/abBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AB"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="알러지 정보 입력"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/noAllergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="해당 없음"/>

            <RadioButton
                android:id="@+id/yesAllergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="해당 있음"/>
        </RadioGroup>

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="6"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:ems="15"
            android:background="@drawable/edittext_unaccessible_border" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>