<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.QuestionnaireFinalFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bottom_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionnaireInput"
            style="@style/ToolbarTitleText" />

        <TextView
            android:id="@+id/qnFinalBeforeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before"
            style="@style/ToolbarLeftTextBtn"/>

        <TextView
            android:id="@+id/qnFinalCompleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            style="@style/ToolbarRightTextBtn" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="흡연 여부"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_inputcheck" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/smokeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/smokeNoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="없음"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/smokeYesBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="있음"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RadioGroup>

            <EditText
                android:id="@+id/smokeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_unaccessible_border"
                android:hint="흡연 주기 적어주세요. (일주일에 2번)"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="음주 유무"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_inputcheck" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/drinkRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/drinkNoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="없음"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/drinkYesBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="있음"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RadioGroup>

            <EditText
                android:id="@+id/drinkInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_unaccessible_border"
                android:hint="음주 주기 적어주세요.(일주일에 2번)"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="기타 특이사항"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_inputcheck" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/etcRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/etcNoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="없음"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/etcYesBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="있음"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RadioGroup>

            <EditText
                android:id="@+id/etcInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_unaccessible_border"
                android:gravity="top"
                android:hint="기타 특이사항 적어주세요."
                android:inputType="textMultiLine"
                android:lines="6"
                android:padding="15dp"
                android:scrollHorizontally="true" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>